--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <title>Angular2 Cordova Starter</title>
-    <base href="/">
+    <!--<base href="/">-->
   </head>
   <body>
   <div class="container">
